SD-53 realigned restaurant profile, added fixed header

--- a/frontend/scarborough_dining/src/components/AccountCreation/styles.css
+++ b/frontend/scarborough_dining/src/components/AccountCreation/styles.css
@@ -6,7 +6,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 0px 26px 0px 26px;
+    padding: 60px 26px 0px 26px;
 }
 
 .containerStyle .title {
