--- a/frontend/scarborough_dining/src/components/RestaurantProfile/styles.css
+++ b/frontend/scarborough_dining/src/components/RestaurantProfile/styles.css
@@ -2,7 +2,7 @@
 
 .restaurant-profile {
     text-align: left;
-    padding: 40px;
+    padding: 100px 300px 60px;
     font-family: 'Didact Gothic', sans-serif;
 }
 
@@ -12,19 +12,36 @@
 }
 
 .profile-logo {
-    max-width: 400px;
+    max-width: 700px;
     width: 100%;
-    height: 10vw;
+    height: 35vw;
     object-fit: cover;
 }
 
-.restaurant-info .text-container {
-    display: inline-block;
-    text-align: center;
+.restaurant-title {
+    padding: 0px 20px 20px;
+}
+
+.restaurant-title .title {
+    font-size: 60px;
     font-family: 'Didact Gothic', sans-serif;
+}
+
+.restaurant-info .text-container {
+    /* display: inline-block; */
+    /* text-align: left; */
+    font-family: 'Didact Gothic', sans-serif;
+    font-size: 18px;
     padding: 16px;
 }
 
+.image-text-container {
+    padding: 0px 40px 0px 40px;
+}
+
+.image-text-container .text{
+    font-size:18px;
+}
 .text-container .profile-title {
     font-size: 60px;
 }
@@ -36,6 +53,7 @@
 .restaurant-info .video-container {
     display: flex;
     justify-content: center;
+    width: 800px;
     padding: 16px 16px 46px;
 }
 
